fixing layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -5,8 +5,8 @@
     gap: .5rem;
 
     padding: 1.75rem 1.5rem;
-
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     position: relative;
 
     p {
@@ -27,8 +27,9 @@
     }
 
     &:hover, &:has(:focus) {
+        outline-width: 0;
         background-color: var(--surface-secondary);
-        border: 2px dashed var(--stroke-highlight);
+        border-color: var(--stroke-highlight);
 
         p {
             color: var(--text-tertiary);
